<resources>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="btnDownload">Download Data</string>
    <string name="password">Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="folder_not_created"> Folder Not Created </string>
    <string name="network_conn_error"> Network connection not available ! </string>
    <string name="invalid_password"> Invalid Password </string>
    <string name="username_required"> Username is required. </string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
    <string name="upd_db_error"> Updating Database… ERROR! </string>
    <string name="username">Username</string>
    <string name="btnLogin">Login</string>
    <string name="country">Language (Click to change)</string>
    <string name="downData">Download Data</string>
    <string name="oldPassword" translatable="false">Old Password</string>
    <string name="newPassword" translatable="false">New Password</string>
    <string name="fail_db_upd"> Failed to Update Database! </string>
    <string name="upd_db"> Updating Database...\t </string>
    <string name="db_excp_error"> Database Exception... ERROR! </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="startinterview" translatable="false">START INTERVIEW</string>
    <string name="section01screeningsection_mainheading">Section 01: Screening Section: </string>
    <string name="section02presentingcomplaints_mainheading">Section 02: Presenting Complaints: </string>
    <string name="section03history_mainheading">Section 03: History: </string>
    <string name="section04examination_mainheading">Section 04: Examination: </string>
    <string name="section05diagnosis_mainheading">Section 05: Diagnosis: </string>
    <string name="section06vaccination_mainheading">Section 06: Vaccination: </string>
    <string name="section07medicineprescription_mainheading">Section 07: Medicine Prescription: </string>
    <string name="app_name"> Quasi-experimental Trial</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="apptitle">Health Facilities Management Project</string>
    <string name="title2">PATIENT RECORD SHEET</string>
    <string name="prno">Patient Record Number</string>
    <string name="facility">Facility Name</string>
    <string name="date">Date</string>
    <string name="time">Form TIME</string>
    <string name="ss0title">Doctor\'s Information</string>
    <string name="ss100">Doctor\'s Name</string>
    <string name="ss1title">Patient Information</string>
    <string name="ss101">Patient Name</string>
    <string name="ss102">Father / Husband Name</string>
    <string name="ss103">Gender</string>
    <string name="ss10301">Male</string>
    <string name="ss10302">Female</string>
    <string name="ss104">Age</string>
    <string name="ss104y">Years</string>
    <string name="ss104m">Months</string>
    <string name="ss104d">Days</string>
    <string name="ss105">Marital Status</string>
    <string name="ss10501">Never Married</string>
    <string name="ss10502">Divorced</string>
    <string name="ss10503">Married</string>
    <string name="ss10504">Widowed</string>
    <string name="ss106">Locality / Address</string>
    <string name="ss107">Purpose of Visit</string>
    <string name="ss10701">OPD</string>
    <string name="ss10702">Antenatal</string>
    <string name="ss10703">Vaccination</string>
    <string name="ss10704">Post-Natal</string>
    <string name="ss108">Contact Number</string>
    <string name="ss200">Vitals</string>
    <string name="ss201">BP</string>
    <string name="ss201s">Systolic blood pressure</string>
    <string name="ss201d">Diastolic blood pressure</string>
    <string name="ss201nr">Not Reported</string>
    <string name="ss202">Pulse</string>
    <string name="ss202nr">Not Reported</string>
    <string name="ss203">R/R</string>
    <string name="ss203nr">Not Reported</string>
    <string name="ss204">Temp</string>
    <string name="ss204nr">Not Reported</string>
    <string name="ss205">Blood Oxygen Level (SpO2)</string>
    <string name="ss205nr">Not Reported</string>
    <string name="ss300">Anthro Assessment</string>
    <string name="ss301">Weight (kg)</string>
    <string name="ss302">Height (cm)</string>
    <string name="ss300nr">Not Reported</string>
    <string name="ss303">FOC (cm)</string>
    <string name="ss303nr">Not Reported</string>
    <string name="ss304">MUAC (cm)</string>
    <string name="ss304nr">Not Reported</string>
    <string name="ss401">Hb test (gm/dl)</string>
    <string name="ss401nr">Not Reported</string>
    <string name="ss500">Urine Dipstick</string>
    <string name="ss501title">Urine Dipstick</string>
    <string name="ss501">Proteins</string>
    <string name="ss50101">Positive</string>
    <string name="ss50102">Negative</string>
    <string name="ss50199">Not Reported</string>
    <string name="ss502">Glucose</string>
    <string name="ss50201">Positive</string>
    <string name="ss50202">Negative</string>
    <string name="ss50299">Not Reported</string>
    <string name="ss503">WCC</string>
    <string name="ss504">Bilirubin</string>
    <string name="ss50401">Positive</string>
    <string name="ss50402">Negative</string>
    <string name="ss50499">Not Reported</string>
    <string name="ss5nr">Not Reported</string>
    <string name="ss601">Vaccination Status</string>
    <string name="ss60101">Ongoing</string>
    <string name="ss60102">Fully vaccinated</string>
    <string name="ss60103">Not vaccinated</string>
    <string name="pctitle">SECTION 2: PRESENTING COMPLAINTS</string>
    <string name="pc200">Presenting Complaints</string>
    <string name="pc201">Fever</string>
    <string name="pc202">Reluctant to feed</string>
    <string name="pc203">Lethargy</string>
    <string name="pc204">Fits</string>
    <string name="pc205">Respiratory Distress</string>
    <string name="pc206">Irritability</string>
    <string name="pc207">Excessive crying</string>
    <string name="pc208">Cyanosis</string>
    <string name="pc209">Umbilical Discharge</string>
    <string name="pc210">Congenital Anomalies</string>
    <string name="pc211">Itching</string>
    <string name="pc212">Skin rash/ Boils/Pustules/ Abscesses / Blisters</string>
    <string name="pc213">Flu</string>
    <string name="pc214">Cough</string>
    <string name="pc215">Sore throat</string>
    <string name="pc216">Eye redness/ itching in eyes</string>
    <string name="pc217">Mouth breathing</string>
    <string name="pc218">Nasal blockage</string>
    <string name="pc219">Runny Nose/Bleeding</string>
    <string name="pc220">Earache/ discharge</string>
    <string name="pc221">Impaired Hearing</string>
    <string name="pc222">Tooth Ache / Dental Caries</string>
    <string name="pc223">Burns</string>
    <string name="pc224">Minor Trauma / Lacerations</string>
    <string name="pc225">Chest pain</string>
    <string name="pc226">Apprehension/Palpitation</string>
    <string name="pc227">Shortness of breath</string>
    <string name="pc228">Dizziness</string>
    <string name="pc229">Blurred/ Double Vision</string>
    <string name="pc230">Headache</string>
    <string name="pc231">Body aches</string>
    <string name="pc232">Backache</string>
    <string name="pc233">Neck Pain</string>
    <string name="pc234">Joints Pain /stiffness</string>
    <string name="pc235">Gait Abnormalities</string>
    <string name="pc236">Numbness / tingling sensation in palms and soles extremities</string>
    <string name="pc237">Insomnia</string>
    <string name="pc238">Pallor</string>
    <string name="pc239">Jaundice</string>
    <string name="pc240">Weight loss</string>
    <string name="pc241">Flank Pain</string>
    <string name="pc242">Burning micturition</string>
    <string name="pc243">Increased frequency / urgency of urination</string>
    <string name="pc244">Hematuria</string>
    <string name="pc245">Irregular Menstrual Cycle</string>
    <string name="pc246">Per vaginal bleeding/ discharge</string>
    <string name="pc247">Lump in breast</string>
    <string name="pc248">Nipple Discharge</string>
    <string name="pc249">Pica</string>
    <string name="pc250">Oral ulcers/ thrush</string>
    <string name="pc251">Heart Burns / Epigastric pains</string>
    <string name="pc252">Decreased appetite</string>
    <string name="pc253">Nausea</string>
    <string name="pc254">Vomiting</string>
    <string name="pc255">Abdominal Pain</string>
    <string name="pc256">Loose stools</string>
    <string name="pc257">Blood in stools</string>
    <string name="pc258">Constipations</string>
    <string name="pc259">Bleeding per rectum</string>
    <string name="pc2961">Others 1</string>
    <string name="pc2962">Others 2</string>
    <string name="pc2963">Others 3</string>
    <string name="pc200nr">Not Reported</string>
    <string name="sh31title">SECTION 3: HISTORY</string>
    <string name="sh101">Co-morbidities</string>
    <string name="sh10101">Diabetes</string>
    <string name="sh10102">Chronic Kidney Disease</string>
    <string name="sh10103">Hypertension</string>
    <string name="sh10104">Hepatitis B or C</string>
    <string name="sh10105">Ischemic Heart Disease</string>
    <string name="sh10106">Tuberculosis</string>
    <string name="sh10107">Epilepsy</string>
    <string name="sh10108">COPD</string>
    <string name="signin">Sign In</string>
    <string name="btnDownloadData">Download Data</string>
    <string name="downloadDataDesc">Please download the data before login</string>
</resources>