<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/appbg"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/language_menu"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextColor="@color/colorPrimaryLight"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/appbg"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_30sdp">

            <ImageView
                android:id="@+id/appLogoIV"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_alignTop="@+id/loginLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_minus30sdp"
                android:background="@drawable/bg_circle_white_filled"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/app_icon"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_app_color_bordered"
                android:elevation="-1dp"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_17sdp">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.5"
                    android:text="@string/signin"
                    android:textColor="@color/blackOverlay"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_rounded_app_color_bordered">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_toStartOf="@+id/usernameIV"
                        android:background="@null"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_9ssp" />

                    <ImageView
                        android:id="@+id/usernameIV"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:background="@drawable/ic_user"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/usernameLayout"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_rounded_app_color_bordered">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_toStartOf="@+id/passwordIV"
                        android:background="@null"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_9ssp" />

                    <ImageView
                        android:id="@+id/passwordIV"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:background="@drawable/ic_locked"
                        android:onClick="onShowPasswordClick"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/passwordLayout"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_rounded_app_color_dark_filled"
                    android:elevation="@dimen/_2sdp"
                    android:onClick="attemptLogin"
                    android:text="@string/btnLogin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/loginProgress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/btnSignin"
                    android:layout_alignBottom="@+id/btnSignin"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/downloadDataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginLayout"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_rounded_orange_bordered"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    android:id="@+id/downloadDataDescTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/downloadDataDesc"
                    android:textColor="@color/blackOverlay"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/syncData"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_rounded_orange_filled"
                    android:elevation="@dimen/_2sdp"
                    android:onClick="onSyncDataClick"
                    android:text="@string/btnDownloadData"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtinstalldate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="Ver."
                    android:textColor="@color/grayOverlay"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</layout>